translation-tool/inputs/source_meta/objects/Side_Bar_Menu_Items__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Child_Label__c</fullName>
        <label>Child Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Value__c</fullName>
        <label>Component Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Permissions__c</fullName>
        <label>Custom Permissions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_In_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable In CP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_In_EP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable In EP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_In_PP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable In PP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Pop_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Pop-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Icon_Image__c</fullName>
        <label>Icon Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Label__c</fullName>
        <label>Master Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pop_up_Target__c</fullName>
        <label>Pop-up Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Sign_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Sign On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub-Category Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VF_Page_Associated__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SA Side-Bar Menu Items</label>
</CustomObject>